# ECS

./: CMakeLists.txt  README.md
include/ecs/: component.h  engine.h  entity.h  event.h  json.h  resource.h  system.h  util.h  world.h
src/ecs/: component.cpp  engine.cpp  entity.cpp  event.cpp  resource.cpp  system.cpp  util.cpp  world.cpp
